[workspace]

members = [
    "core"
]

[dependencies]
sha2 = "0.10"
blake3 = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.12", features = ["full"] }
petgraph = "0.6"
thiserror = "1.0"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"